--- a/daily-tasks.html
+++ b/daily-tasks.html
@@ -37,10 +37,29 @@
     <div class="page-description-section">
         <div class="container">
             <div class="row">
-                <p>At Your Better Care, we recognize that travel can pose challenges for many individuals, potentially feeling like a burden. That's why we empathize with such concerns and offer comprehensive transport service support. Our aim is to empower participants, enabling them to travel independently using private vehicles or public transportation.</p>
-                <p> Our transport support extends beyond just facilitating travel; it also covers essential expenses, such as taxi hires or alternative options. This service is not limited to those unable to travel independently; it also caters to students commuting to and from school.</p>
-                <p>At Your Better Care, expect secure and hassle-free transport options scheduled in advance. Whether you need to reach educational facilities, workplaces, medical appointments, local shopping centers, or simply explore your community, we've got you covered.</p>
-                <p> At Your Better Care, you'll receive safe and convenient transport options, scheduled in advance, from us so that you can reach any place including:</p>
+                <div class="py-3">
+                    <h5>Achieve Greater Independence with Daily Tasks Shared Living</h5>
+                    <p>Are you an NDIS participant seeking personalized assistance to enrich your daily life experience within a supportive shared environment? Your Better Care presents the Daily Tasks Shared Living NDIS service, tailored to elevate your independence, cultivate new skills, and foster a welcoming atmosphere for you and your housemates.</p>
+                </div>
+                <div class="py-3">
+                    <h5>Personalized Support for Every Aspect of Daily Living</h5>
+                    <p>At Your Better Care, our compassionate and skilled team recognizes the unique needs of each participant. We specialize in crafting individualized plans that not only address your daily living requirements but also empower you to enhance your assistance with daily life through the NDIS. With our comprehensive range of services, participants find it easier to pursue their goals within a shared living setting.</p>
+                </div>
+                <div class="py-3">
+                    <h5>Key Features and Benefits/h5>
+                    <p>Your Better Care's Daily Tasks Shared Living NDIS service offers a diverse array of support options designed to ensure your satisfaction and growth. Our support includes, but is not limited to:</p>
+                </div>
+                <p><b>Assistance with Daily Basic Tasks:</b> Receive support with personal care, dressing, and grooming, allowing you to conserve time and energy for other pursuits.</p>
+                <p><b>Preparing Healthy Meals:</b> Enjoy a culinary experience that not only delights your taste buds but also provides balanced and nutritious meals to promote overall well-being.</p>
+                <p><b>Engagement in Recreational Activities:</b> Cultivate social connections, forge enduring friendships, and indulge in favorite pastimes with our assistance in recreational activities.</p>
+                <p><b>Assistance with Communication and Bill Payment:</b> Experience peace of mind as we facilitate your communication needs and ensure timely payment of bills.</p>
+                <p><b>Shopping Support:</b> Navigate stores confidently and make informed purchases with our assistance during shopping outings.</p>
+                <p><b>Medication Management:</b> Stay on track with your medication schedule, alleviating the stress of timing and dosage requirements.</p>
+                <div class="py-3">
+                    <h5>The Your Better Care Advantage</h5>
+                    <p>Participants of Your Better Care's Daily Tasks Shared Living NDIS service have reported significant enhancements in their life skills and independence. Join our growing community of satisfied participants who have been empowered to lead more fulfilling lives.</p>
+                    <p>At Your Better Care, we're committed to providing personalized support and fostering a supportive environment where you can thrive and achieve greater independence in your daily tasks.</p>
+                </div>
                 <div class="list-style">
                     <ul>
                         <li>School or another educational facility</li>
