--- a/daily-tasks.html
+++ b/daily-tasks.html
@@ -46,7 +46,7 @@
                     <p>At Your Better Care, our compassionate and skilled team recognizes the unique needs of each participant. We specialize in crafting individualized plans that not only address your daily living requirements but also empower you to enhance your assistance with daily life through the NDIS. With our comprehensive range of services, participants find it easier to pursue their goals within a shared living setting.</p>
                 </div>
                 <div class="py-3">
-                    <h5>Key Features and Benefits/h5>
+                    <h5>Key Features and Benefits</h5>
                     <p>Your Better Care's Daily Tasks Shared Living NDIS service offers a diverse array of support options designed to ensure your satisfaction and growth. Our support includes, but is not limited to:</p>
                 </div>
                 <p><b>Assistance with Daily Basic Tasks:</b> Receive support with personal care, dressing, and grooming, allowing you to conserve time and energy for other pursuits.</p>
