--- a/services.html
+++ b/services.html
@@ -74,25 +74,25 @@
                 </div>
                 <div class="col-md-4">
                     <a href="development-life-skills.html" class="service-box">
-                        <div class="service-image"><img src="images/s6.jpg" class="img-fluid" alt="banner-image"></div>
+                        <div class="service-image"><img src="images/development-life-skills.jpg" class="img-fluid" alt="banner-image"></div>
                         <div class="service-title"><h2>Development Life Skills</h2></div>
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="household-tasks.html" class="service-box">
-                        <div class="service-image"><img src="images/s6.jpg" class="img-fluid" alt="banner-image"></div>
+                        <div class="service-image"><img src="images/household-tasks.jpg" class="img-fluid" alt="banner-image"></div>
                         <div class="service-title"><h2>Household Tasks</h2></div>
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="participate-community.html" class="service-box">
-                        <div class="service-image"><img src="images/s6.jpg" class="img-fluid" alt="banner-image"></div>
+                        <div class="service-image"><img src="images/participate-community.jpg" class="img-fluid" alt="banner-image"></div>
                         <div class="service-title"><h2>Participate Community</h2></div>
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="group-centre-activities.html" class="service-box">
-                        <div class="service-image"><img src="images/s6.jpg" class="img-fluid" alt="banner-image"></div>
+                        <div class="service-image"><img src="images/group-centre-activities.jpg" class="img-fluid" alt="banner-image"></div>
                         <div class="service-title"><h2>Group/Centre Activities</h2></div>
                     </a>
                 </div>
