--- a/services.html
+++ b/services.html
@@ -75,25 +75,25 @@
                 <div class="col-md-4">
                     <a href="development-life-skills.html" class="service-box">
                         <div class="service-image"><img src="images/development-life-skills.jpg" class="img-fluid" alt="banner-image"></div>
-                        <div class="service-title"><h2>Development Life Skills</h2></div>
+                        <div class="service-title"><h2>Development of daily care and life skills</h2></div>
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="household-tasks.html" class="service-box">
                         <div class="service-image"><img src="images/household-tasks.jpg" class="img-fluid" alt="banner-image"></div>
-                        <div class="service-title"><h2>Household Tasks</h2></div>
+                        <div class="service-title"><h2>⁠Assistance with household tasks</h2></div>
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="participate-community.html" class="service-box">
                         <div class="service-image"><img src="images/participate-community.jpg" class="img-fluid" alt="banner-image"></div>
-                        <div class="service-title"><h2>Participate Community</h2></div>
+                        <div class="service-title"><h2>participation in community, social and civic activities</h2></div>
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="group-centre-activities.html" class="service-box">
                         <div class="service-image"><img src="images/group-centre-activities.jpg" class="img-fluid" alt="banner-image"></div>
-                        <div class="service-title"><h2>Group/Centre Activities</h2></div>
+                        <div class="service-title"><h2>Group and Centre based activities</h2></div>
                     </a>
                 </div>
             </div> 
