--- a/maintain-employment.html
+++ b/maintain-employment.html
@@ -28,7 +28,7 @@
                     </div> 
                 </div>  
                 <div class="col-lg-7 col-md-12">
-                    <div><img src="images/services-detail.jpg" class="img-fluid" alt="banner-image"></div>
+                    <div><img src="images/maintain-employment-bn.jpg" class="img-fluid" alt="banner-image"></div>
                 </div> 
             </div>
         </div>
